biocomplexity/templates/stormshare-dev/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: stormshare-dev-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
    - host: stormshare-dev.pods.uvarc.io
      http:
        paths:
          - backend:
              serviceName: stormshare-dev-service
              servicePort: 8080
            path: /
